--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "gh-analytics",
   "version": "0.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "csv": "^6.3.11",
+    "dotenv": "^16.4.7",
+    "octokit": "^4.1.2"
+  }
 }
